<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Screen Lock Study</string>
    <string name="full_name">Screen Lock Study</string>
    <string name="widget_clock_name">Screen Lock Study</string>
    
    <string name="uzero">Uzero</string>

    <string name="theme_description">.</string>

    <string name="about">About</string>
    <string name="rate">Rate</string>
    <string name="details">Details</string>
    <string name="_default">Default</string>
    <string name="theme">Theme</string>
    <string name="adw_theme">ADW Theme</string>
    <string name="veil">Veil</string>
    <string name="close">Close</string>
    <string name="whats_new">What\'s New</string>
    <string name="developed_by">Developed by DGB</string>
    <string name="colon">:</string>

    <string name="camera">Camera</string>
    <string name="browser">Browser</string>
    <string name="message">Message</string>

    <string name="before">Before</string>
    <string name="after">After</string>

    <string name="no_data">NO DATA</string>

    <string name="screen_lock">Screen Lock</string>
    <string name="screen_lock_summary_on">Enable Lock Screen Replacement</string>
    <string name="screen_lock_summary_off">Disabled Lock Screen Replacement</string>

    <string name="not_found_market">Google Play Store is not found.</string>
    <string name="not_found_app">Application is not found.</string>

    <string name="general_behavior">General Behavior</string>
    <string name="general_behavior_summary">General application behavior configuration</string>

    <string name="ui_settings">UI Settings</string>
    <string name="ui_settings_summary">Screen lock user interface configuration</string>

    <string name="theme_settings">Themes Settings</string>
    <string name="theme_settings_summary">Select theme</string>

    <string name="preference_dock">Dock</string>
    <string name="preference_dock_summary">Dock on screen lock configuration</string>

    <string name="backup_and_restore">Backup and restore</string>
    <string name="backup_and_restore_summary">Backup and restore settings</string>
    
    <string name="preview_screen_lock">Preview screen lock</string>
    <string name="preview_screen_lock_summary">Preview general behavior and settings</string>

    <string name="about_summary">About</string>

    <string name="reset_preferences">Reset</string>
    <string name="reset_preferences_summary">Clear settings and restart</string>

    <string name="build_information">Build Information</string>
    <string name="version">Version</string>

    <string name="help">Help</string>
    <string name="help_summary">User manual</string>
    <string name="help_first_message">Lingua Lock is screen lock application. When you enable Lingua Lock, lock screen is replaced.\n\nLingua Lock can put many functions on screen. Please check it.</string>
    <string name="help_widget_message">Widget Area is the widget application area. A installed widget put on. Default is an analog widget, set by yourself.</string>
    <string name="help_dock_message">Dock Area is the application launcher area. Five application shortcus are put on dock.</string>
    <string name="help_unlock_message">When you slide on a veiled empty space, Lingua Lock is unlocked. The veil is installable from Google Play Store.</string>

    <string name="legal_policy">Legal Policy</string>

    <string name="member">Project Member</string>
    <string name="member_summary">Special Thanks for Lingua Lock</string>

    <string name="internationalization">Internationalization</string>
    <string name="internationalization_summary">Special Thanks for internationalization</string>

    <string name="change_log">Change Log</string>
    <string name="change_log_summary">Application change log</string>
    
    <string name="open_source_license">Open source license</string>
    <string name="open_source_license_summary">License details for open source software</string>

    <string name="ask_backup_settings">Do you want to backup settings?</string>
    <string name="ask_restore_settings">Do you want to restore settings?</string>

    <string name="preference_veil">Veil</string>
    <string name="preference_veil_summary">Select veil</string>
    <string name="veil_mode">Veil mode</string>
    <string-array name="veil_mode_entries">
        <item>Always show</item>
        <item>Always hide</item>
        <item>When touch on screen</item>
    </string-array>
    <string-array name="veil_mode_entry_values">
        <item>always_show</item>
        <item>always_hide</item>
        <item>touch_on_screen</item>
    </string-array>
    <string name="veil_mode_default_value">always_show</string>

    <string name="unlock_process_default_value">long_tap</string>
    <string name="select_veil">Select veil</string>
    <string name="find_veil">Find more veil</string>

    <string name="veil_transparency">Veil transparency</string>
    <string-array name="veil_transparency_entries">
        <item>Most light</item>
        <item>More light</item>
        <item>Standard</item>
        <item>More darken</item>
        <item>Most darken</item>
    </string-array>
    <string-array name="veil_transparency_entry_values">
        <item>50</item>
        <item>80</item>
        <item>120</item>
        <item>160</item>
        <item>200</item>
    </string-array>
    <string name="veil_transparency_default_value">120</string>

    <string name="preference_lock">Unlock manual</string>
    <string name="unlock_process">Unlock manual</string>
    <string-array name="unlock_process_entries">
        <item>Double tap</item>
        <item>Long tap</item>
        <item>Swype only</item>
    </string-array>
    <string-array name="unlock_process_entry_values">
        <item>double_click</item>
        <item>long_tap</item>
        <item>nothing</item>
    </string-array>

    <string name="unlock_slide_distance">Unlock slide distance</string>
    <string-array name="unlock_slide_distance_entries">
        <item>Most short</item>
        <item>More short</item>
        <item>Default</item>
        <item>More long</item>
        <item>Most long</item>
    </string-array>
    <string-array name="unlock_slide_distance_entry_values">
        <item>8000</item>
        <item>20000</item>
        <item>50000</item>
        <item>75000</item>
        <item>95000</item>
    </string-array>
    <string name="unlock_slide_distance_default_value">50000</string>
    
    <string name="dock_show_mode">Dock show mode</string>
    <string-array name="dock_show_mode_entries">
        <item>Always show</item>
        <item>Always hide</item>
        <item>Show by swype</item>
    </string-array>
    <string-array name="dock_show_mode_entry_values">
        <item>always_show</item>
        <item>always_hide</item>
        <item>show_by_slide</item>
    </string-array>
    <string name="dock_show_mode_default_value">always_show</string>

    <string name="dock_launcher">Dock Applications</string>
    <string name="application1">Application 1</string>
    <string name="application2">Application 2</string>
    <string name="application3">Application 3</string>
    <string name="application4">Application 4</string>
    <string name="application5">Application 5</string>

    <string name="wallpaper_transparent">Wallpaper transparent</string>
    <string name="wallpaper_transparent_summary_on">Wallpaper is transparent</string>
    <string name="wallpaper_transparent_summary_off">Wallpaper is ADW Theme\'s one</string>
    <string name="wallpaper_transparent_default_value">false</string>

    <string name="preference_widget">Widget</string>
    <string name="display_widget">Display widget</string>
    <string name="display_widget_default_value">true</string>
    <string name="widget_id">Select widget</string>

    <string name="widget_position">Position</string>
    <string name="widget_position_summary"></string>
    <string-array name="widget_position_entries">
        <item>Left</item>
        <item>Center</item>
        <item>Right</item>
    </string-array>
    <string-array name="widget_position_entry_value">
        <item>left</item>
        <item>center</item>
        <item>right</item>
    </string-array>
    <string name="widget_position_default_value">center</string>

    <string name="widget_clickable">Touch event</string>

    <string name="find_widget">Find more widget</string>

    <string name="preference_theme">Theme</string>
    <string name="select_theme">Select theme</string>
    <string name="apply_theme_icon">Apply theme icons</string>
    <string name="apply_theme_icon_summary">Use theme\'s icons for dock icon</string>
    <string name="find_theme">Find more theme</string>

    <string name="data_backup">Backup settings</string>
    <string name="data_backup_summary">Backup to /sdcard/lingua_lock.xml</string>
    <string name="data_restore">Restore Lingua Lock settings</string>
    <string name="data_restore_summary">Restore from /sdcard/lingua_lock.xml</string>

    <string-array name="empty">
    </string-array>

    <!-- ImageView contentDescription -->
    <string name="crope_lock_veil">unlock screen veil</string>
    <string name="crope_lock_launcher">launcher shortcut</string>
    <string name="icon_text_item_drawable">icon and text item drawable</string>
    <string name="icon_preference_drawable">icon preference drawable</string>
</resources>